<resources>
    <string name="app_name">Домодел</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>
    <string name="enter">Вход</string>
    <string name="errorLogin">Введите верный логин и пароль!</string>
    <string name="accessLogin">Вы вошли!</string>
    <string name="title_activity_info">MainActivity</string>
    <string name="title_news">Новости</string>
    <string name="title_counter">Счетчики</string>
    <string name="title_requisites">Инфо</string>
    <string name="title_payment">Оплата</string>
    <string name="title_request">Заявки</string>
    <string name="title_information">Информация</string>
    <string-array name="questionsRequest">
        <item>Вопрос 1</item>
        <item>Вопрос 2</item>
        <item>Вопрос 3</item>
        <item>Вопрос 4</item>
        <item>Другой вопрос</item>
    </string-array>
</resources>