<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_frag_news"
        android:icon="@drawable/ic_event_note_black_48dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/nav_frag_counter"
        android:icon="@drawable/ic_av_timer_black_48dp"
        android:title="@string/title_counter" />

    <item
        android:id="@+id/nav_frag_payment"
        android:icon="@drawable/baseline_credit_card_black_48"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/nav_frag_request"
        android:icon="@drawable/ic_build_black_48dp"
        android:title="@string/title_request" />

    <item
        android:id="@+id/nav_frag_info"
        android:icon="@drawable/outline_info_black_48dp"
        android:title="@string/title_requisites" />

</menu>